feat: add cleanup campaigns
